--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,55 +14,32 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLabel" name="player1Name">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>60</y>
-      <width>58</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Player 1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="player2Name">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>170</y>
-      <width>58</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Player 2</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="startNewGame">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>10</y>
-      <width>111</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Start new game</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="gameBoard" native="true">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>80</y>
-      <width>120</width>
-      <height>80</height>
-     </rect>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QPushButton" name="startNewGame">
+      <property name="text">
+       <string>Start new game</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="player1Name">
+      <property name="text">
+       <string>Player 1</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="gameBoard" native="true"/>
+    </item>
+    <item>
+     <widget class="QLabel" name="player2Name">
+      <property name="text">
+       <string>Player 2</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
