--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,6 +24,12 @@
     </item>
     <item>
      <widget class="QLabel" name="player1Name">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
        <string>Player 1</string>
       </property>
@@ -34,6 +40,12 @@
     </item>
     <item>
      <widget class="QLabel" name="player2Name">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
        <string>Player 2</string>
       </property>
