--- a/resources.qrc
+++ b/resources.qrc
@@ -1,2 +1,6 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/">
+        <file>icons/application-exit.png</file>
+        <file>icons/newgame.png</file>
+    </qresource>
+</RCC>
